# GIS

./: .gitignore  CMakeLists.txt  README.md  generateGraphs.sh  output.txt  runTestTimeConsumption.sh
doc/: Makefile  sprawozdanie1.tex  sprawozdanie2.tex  sprawozdanie3.tex
sample_graphs/: sample_data10.txt  sample_data11.txt  sample_data2.txt  sample_data4.txt  sample_data5.txt  sample_data6.txt  sample_data7.txt  sample_data8.txt  sample_data9.txt
src/: Makefile  algorithm.h  gis.c  graphgen.c  io.c  io.h  kosaraju.c  sample_data3.txt  wcc.c
