cmake_minimum_required(VERSION 2.8)

PROJECT(gis)

SET(VERSION_MAJOR "0")
SET(VERSION_MINOR "1")
SET(VERSION_PATCH "0")
SET(VERSION_MAJOR_MINOR ${VERSION_MAJOR}.${VERSION_MINOR})
SET(VERSION_STRING ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH})

SET(PROJECT_NAME_WITH_VERSION ${PROJECT_NAME}.${VERSION_STRING})

SET(CMAKE_COLOR_MAKEFILE ON)

SET(SOURCE_DIR src)

SET(project_SOURCE
                ${SOURCE_DIR}/gis.c
                ${SOURCE_DIR}/io.c
                ${SOURCE_DIR}/wcc.c
                ${SOURCE_DIR}/kosaraju.c
)

INCLUDE_DIRECTORIES(
                ${SOURCE_DIR}
)

ADD_EXECUTABLE(${PROJECT_NAME_WITH_VERSION} ${project_SOURCE})
